не падать на повторяющемся слове в сравнении заголовков